app/assets/stylesheets/application.tailwind.css
/* Custom components */
@import 'custom/custom.css';

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
  .heading {
    @apply text-2xl sm:text-3xl font-bold text-slate-900 dark:text-slate-100 tracking-tight;
  }

  .subheading {
    @apply text-xl sm:text-2xl font-semibold text-slate-900 dark:text-slate-100 tracking-tight;
  }

  .text-normal {
    @apply text-slate-800 dark:text-slate-100;
  }

  .text-normal-reverse {
    @apply text-slate-100 dark:text-slate-800;
  }

  .text-light {
    @apply text-slate-700 dark:text-slate-300;
  }

  .text-light-reverse {
    @apply text-slate-300 dark:text-slate-700;
  }

  .text-soft {
    @apply text-slate-600 dark:text-slate-400;
  }

  .text-soft-reverse {
    @apply text-slate-400 dark:text-slate-600;
  }

  .text-muted {
    @apply text-slate-500 dark:text-slate-500;
  }

  .row-numbers {
    @apply relative;
  }

  .row-numbers tbody {
    counter-reset: rowNumber;
  }

  .row-numbers tbody tr {
    counter-increment: rowNumber;
  }

  .row-numbers tbody .row-number::before {
    content: counter(rowNumber);
  }

  .modal {
    @apply fixed left-1/2 top-1/2 z-50 w-[calc(100%-2rem)] sm:w-full -translate-x-[calc(50%+1rem)] sm:-translate-x-1/2 -translate-y-1/2 max-w-2xl gap-4 bg-white dark:bg-[#131c2f] border border-slate-100 dark:border-slate-800 p-6 shadow-md transition duration-200 ease-in-out rounded-2xl mx-4 sm:mx-0 overflow-y-auto max-h-[calc(100svh-16rem)] mt-0 mb-10 sm:mb-0 max-sm:[@media(display-mode:standalone)]:max-h-[calc(100svh-12rem)] max-sm:[@media(display-mode:standalone)]:mb-12;
  }

  .modal-large {
    @apply fixed left-1/2 top-1/2 z-50 w-[calc(100%-2rem)] -translate-x-[calc(50%+1rem)] -translate-y-1/2 max-w-6xl gap-4 bg-white dark:bg-[#131c2f] border border-slate-100 dark:border-slate-800 p-6 shadow-md transition duration-200 ease-in-out rounded-2xl mx-4 overflow-y-auto max-h-[calc(100svh-10rem)] mt-0 mb-10;
  }

  /* Firefox - Higher specificity */
  .modal,
  .modal-large,
  .modal *,
  .modal-large * {
    scrollbar-width: thin;
    scrollbar-color: #9ca3af white; /* Light mode */
  }

  html.dark .modal,
  html.dark .modal-large,
  html.dark .modal,
  html.dark .modal-large * {
    scrollbar-color: #374151 #131c2f; /* Dark mode */
  }

  /* Chrome, Edge, and Safari */
  .modal::-webkit-scrollbar,
  .modal-large::-webkit-scrollbar {
    @apply w-2;
  }

  .modal::-webkit-scrollbar-track,
  .modal-large::-webkit-scrollbar-track {
    @apply bg-white dark:bg-[#131c2f]; /* Overrides global styles */
  }

  .modal::-webkit-scrollbar-thumb,
  .modal-large::-webkit-scrollbar-thumb {
    @apply bg-gray-400 dark:bg-gray-500; /* Thumb styling */
  }

  .modal::-webkit-scrollbar-thumb:hover,
  .modal-large::-webkit-scrollbar-thumb:hover {
    @apply bg-gray-500 dark:bg-gray-600;
  }

  .modal-backdrop {
    @apply fixed inset-0 z-50 bg-black/50 backdrop-blur-sm transition duration-200 ease-in-out w-full h-full;
  }

  .modal-x-btn {
    @apply absolute right-2 top-2 p-2 rounded-full opacity-70 transition-opacity hover:opacity-100 focus:outline-none focus:ring-2 focus:ring-offset-2 hover:bg-slate-200 dark:hover:bg-slate-700;
  }

  .card {
    @apply p-4 sm:p-6 rounded-xl bg-white dark:bg-slate-800/60 shadow-md dark:shadow-none border border-slate-200 dark:border-slate-700;
  }

  .card-opaque {
    @apply p-4 sm:p-6 rounded-xl bg-white dark:bg-slate-800 shadow-md dark:shadow-none border border-slate-200 dark:border-slate-700;
  }

  .dropdown-toggle {
    @apply flex items-center gap-3 py-2 px-4 border border-slate-300 shadow bg-white font-normal rounded-md focus:outline-none focus:border-indigo-500 dark:bg-slate-800 dark:border-slate-700 dark:focus:border-slate-600;
  }

  .dropdown-menu {
    @apply pointer-events-none absolute z-50 w-max scale-75 min-w-32 rounded-lg bg-white p-1 opacity-0 shadow-md transition duration-200 ease-in-out dark:bg-slate-800 border border-slate-300 dark:border-slate-700 dark:shadow-none flex flex-col;
  }

  .dropdown-option {
    @apply flex items-center gap-2.5 p-2 rounded text-sm transition duration-200 ease-in-out w-full hover:bg-slate-200/80 dark:hover:bg-slate-700/80;
  }

  .dropdown-option-primary {
    @apply flex items-center gap-2.5 p-2 rounded text-sm transition duration-200 ease-in-out w-full hover:bg-indigo-100 dark:hover:bg-indigo-900/80 hover:text-indigo-700 dark:hover:text-indigo-200;
  }

  .dropdown-option-destructive {
    @apply flex items-center gap-2.5 p-2 rounded text-sm transition duration-200 ease-in-out w-full hover:bg-rose-100 dark:hover:bg-rose-900/80 text-rose-600 dark:text-rose-300 hover:text-rose-700 dark:hover:text-rose-200;
  }

  .breadcrumbs {
    @apply text-sm text-slate-500 mb-4;
  }

  .breadcrumb-list {
    @apply flex space-x-2;
  }

  .breadcrumb-item {
    @apply text-indigo-600 hover:text-indigo-800;
  }

  .breadcrumb-item.active {
    @apply font-semibold text-slate-900;
  }
}

@layer base {
  @font-face {
    font-family: 'InterVariable';
    src: url('../fonts/InterVariable.woff2') format('woff2');
    font-weight: 100 900;
    font-display: swap;
    font-style: normal;
  }

  @font-face {
    font-family: 'InterVariable';
    src: url('../fonts/InterVariable-Italic.woff2') format('woff2');
    font-weight: 100 900;
    font-display: swap;
    font-style: italic;
  }

  input[type='number']::-webkit-inner-spin-button,
  input[type='number']::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0;
  }

  /* Firefox */
  * {
    scrollbar-width: thin;
    scrollbar-color: #9ca3af #d1d5db;
  }

  html.dark * {
    scrollbar-color: #6b7280 #1f2937;
  }

  /* Chrome, Edge, and Safari */
  *::-webkit-scrollbar {
    @apply w-2;
  }

  *::-webkit-scrollbar-track {
    @apply bg-gray-300 dark:bg-gray-800;
  }

  *::-webkit-scrollbar-thumb {
    @apply bg-gray-400 active:bg-gray-500 dark:bg-gray-500 dark:active:bg-gray-600;
  }

  .hide-scrollbar::-webkit-scrollbar {
    @apply hidden;
  }

  /* Hide scrollbar for IE, Edge and Firefox */
  .hide-scrollbar {
    -ms-overflow-style: none !important; /* IE and Edge */
    scrollbar-width: none !important; /* Firefox */
  }

  /* Hide outline for Safari */
  @supports (hanging-punctuation: first) and (font: -apple-system-body) and
    (-webkit-appearance: none) {
    .no-outline-safari {
      outline: none !important;
    }
  }
}

